add dotenv-rails to Gemfile and gitignore stuff

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ dump.rdb
 # Ephemeral application files
 /public/uploads/*
 
+# dotenv stuff suggested to not be committed
+.env
+.env.development
+.env.production
